--- a/views/invoice_settings.erb
+++ b/views/invoice_settings.erb
@@ -5,7 +5,6 @@
   <div data-alerts="alerts" data-titles="{'success':'<%=t.entitymanagement.success%>','warning':'<%=t.entitymanagement.warning%>','error':'<%=t.entitymanagement.error%>'}" data-fade="10000"></div>
 
   <div id="content">
-
     <br>
     <div class="row">
       <div class="col-sm-12 col-md-10 col-md-offset-1">
@@ -20,5 +19,19 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-sm-12 col-md-10 col-md-offset-1">
+        <div class="block ">
+          <div class="block-header bg-gray-lighter">
+            <h3 class="block-title"><%=t.invoice_settings.counters.title%></h3>
+          </div>
+          <div class="block-content">
+            <%= render_counters_autosubmit('customer_invoices', 'Factura de cliente') %>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>    
